--- a/Intro_tensorflow.ipynb
+++ b/Intro_tensorflow.ipynb
@@ -187,8 +187,8 @@
       },
       "source": [
         "## Create the pipeline\n",
-        "interator = dataset.make_initializable_iterator()\n",
-        "get_next = interator.get_next()"
+        "iterator = dataset.make_initializable_iterator()\n",
+        "get_next = iterator.get_next()"
       ],
       "execution_count": 19,
       "outputs": [
@@ -217,7 +217,7 @@
       "source": [
         "## Execute the operation\n",
         "with tf.Session() as session:\n",
-        "  session.run(interator.initializer, feed_dict={x:x_input})\n",
+        "  session.run(iterator.initializer, feed_dict={x:x_input})\n",
         "  print(session.run(get_next))"
       ],
       "execution_count": 21,
